# minneuro

./: .clangd  .gitignore  CMakeLists.txt  file_fatfs_config.h  flash.sh  ncs_env.sh  prj.conf  start.sh
boards/local/minneuro_rhs_devkit/: Kconfig  Kconfig.defconfig  Kconfig.minneuro_rhs_devkit  board.cmake  board.yml  minneuro_rhs_devkit_nrf54l15_cpuapp_ns.dts  minneuro_rhs_devkit_nrf54l15_cpuapp_ns.yaml  minneuro_rhs_devkit_nrf54l15_cpuapp_ns_defconfig
driver/: battery.c  battery.h  board_adc.c  board_adc.h  dac80501.c  dac80501.h  dac80501_hal.c  dac80501_hal.h  dac_dac80501_spi.c  file.c  file.h  file_nrf54_hal.c  ks1092.c  ks1092.h  spim00_bus.c  spim00_bus.h
dts/bindings/dac/: ti,dac80501-spi.yaml
neuro/: eeg_algo.c  eeg_ctrl.c  eeg_manager.c  neuro_ctrl.c  neuro_stim_bank.c  sleep_fusion.c  wave_ctrl.c
neuro/inc/: eeg_algo.h  eeg_ctrl.h  eeg_manager.h  neuro_ctrl.h  neuro_stim_bank.h  sleep_fusion.h  sleep_types.h  wave_ctrl.h
src/: ble.c  ble_aaaa.c  ble_aaaa_aae_imu.c  ble_aaaa_aaf_eeg.c  ble_bat.c  ble_conn.c  ble_debug.c  button.c  eeg_test.c  main.c  sd_fs_test.c  stim_test.c
src/inc/: ble_aaaa.h  ble_aaaa_priv.h  ble_bat.h  ble_debug.h  bsp.h  button.h  eeg_test.h  minneuro_mode.h  mpu_common.h  sd_fs_test.h  stim_test.h
